--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -15,22 +15,22 @@
         </div>
 
         <!-- Task list -->
-        <ul class="list-group mb-0" *ngIf="tasks && tasks.length > 0">
+        <ul class="list-group mb-0" *ngIf="tasks && tasks.length > 0; else notDataTpl">
             <li *ngFor="let task of tasks; let i = index"
                 class="list-group-item d-flex justify-content-between align-items-center border-0 mb-2 rounded"
                 style="background-color: #f4f6f7;">
                 <div>
                     <input class="form-check-input me-2" type="checkbox" [(ngModel)]="task.completed">
-                    <!--<span [ngClass]="{'text-decoration-line-through': task.completed}">{{task.title}}</span>-->
+                    <!-- <span [ngClass]="{'text-decoration-line-through': task.completed}">{{task.title}}</span> -->
+                    <span *ngIf="editableId !== i; else editableCell"
+                        [ngClass]="{'text-decoration-line-through': task.completed}" (dblclick)="startEdit(i)">
+                        {{ task.title }}
+                    </span>
+                    <ng-template #editableCell>
+                        <input class="px-2" type="text" #editInput [value]="task.title"
+                            (blur)="stopEdit(task, editInput.value)" (keyup.enter)="stopEdit(task, editInput.value)" />
+                    </ng-template>
                 </div>
-                <span *ngIf="editableId !== i; else editableCell"
-                    [ngClass]="{'text-decoration-line-through': task.completed}" (dblclick)="startEdit(i)">
-                    {{ task.title }}
-                </span>
-                <ng-template #editableCell>
-                    <input class="px-2" type="text" #editInput [value]="task.title"
-                        (blur)="stopEdit(task, editInput.value)" (keyup.enter)="stopEdit(task, editInput.value)" />
-                </ng-template>
                 <div class="btn-delete-task cursor-pointer" (click)="deleteTask(task)">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                         class="bi bi-trash-fill" viewBox="0 0 16 16">
