--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -1,52 +1,64 @@
 <div class="card rounded-3">
-    <div class="card-body p-4">
+  <div class="card-body p-4">
 
-        <!-- Title -->
-        <span class="fs-6">Lista de tareas</span>
-        <p class="mb-2"><span class="h2 me-2">Acuerdos de equipo</span>
-        </p>
-        <p class="text-muted pb-2">04/01/2020 • AS221 - TEI</p>
+    <!-- Title -->
+    <span class="fs-6">Lista de tareas</span>
+    <p class="mb-2"><span class="h2 me-2">Acuerdos de equipo</span>
+    </p>
+    <p class="text-muted pb-2">04/01/2020 • AS221 - TEI</p>
 
-        <!-- Input text -->
-        <div class="input-group mb-4">
-            <input type="text" class="form-control" placeholder="Agregar tarea" aria-label="Agregar tarea"
-                aria-describedby="btn-add-task" [(ngModel)]="newTask">
-            <button class="btn btn-primary" type="button" id="btn-add-task" (click)="addTask()">Agregar</button>
-        </div>
-
-        <!-- Task list -->
-        <ul class="list-group mb-0" *ngIf="tasks && tasks.length > 0; else notDataTpl">
-            <li *ngFor="let task of tasks; let i = index"
-                class="list-group-item d-flex justify-content-between align-items-center border-0 mb-2 rounded"
-                style="background-color: #f4f6f7;">
-                <div>
-                    <input class="form-check-input me-2" type="checkbox" [(ngModel)]="task.completed">
-                    <!-- <span [ngClass]="{'text-decoration-line-through': task.completed}">{{task.title}}</span> -->
-                    <span *ngIf="editableId !== i; else editableCell"
-                        [ngClass]="{'text-decoration-line-through': task.completed}" (dblclick)="startEdit(i)">
-                        {{ task.title }}
-                    </span>
-                    <ng-template #editableCell>
-                        <input class="px-2" type="text" #editInput [value]="task.title"
-                            (blur)="stopEdit(task, editInput.value)" (keyup.enter)="stopEdit(task, editInput.value)" />
-                    </ng-template>
-                </div>
-                <div class="btn-delete-task cursor-pointer" (click)="deleteTask(task)">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="bi bi-trash-fill" viewBox="0 0 16 16">
-                        <path
-                            d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z" />
-                    </svg>
-                </div>
-            </li>
-        </ul>
-
-        <ng-template #notDataTpl>
-            <div class="d-flex flex-column align-items-center">
-                <img src="assets/svgs/undraw_clean_up_re_504g.svg" width="200" height="200" alt="No hay data">
-                <span class="fs-6 text-secondary">No se encontro ninguna tarea</span>
-            </div>
-        </ng-template>
-
+    <div class="input-group mb-4">
+      <input type="text" class="form-control" [(ngModel)]="searchTerm" placeholder="Buscar.." (input)="filter()">
+      <button class="btn btn-outline-info" type="button" id="btn-add-task" (click)="filter()"><i
+          class="bi bi-search"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+            class="bi bi-search" viewBox="0 0 16 16">
+            <path
+              d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+          </svg></i></button>
     </div>
+
+    <br>
+
+    <!-- Input text -->
+    <div class="input-group mb-4">
+      <input type="text" class="form-control" placeholder="Agregar tarea" aria-label="Agregar tarea"
+        aria-describedby="btn-add-task" [(ngModel)]="newTask">
+      <button class="btn btn-outline-primary" type="button" id="btn-add-task" (click)="addTask()"
+        [disabled]="!newTask">Agregar</button>
+    </div>
+
+
+    <ul class="list-group mb-0" *ngIf="filterTasks.length > 0; else notDataTpl">
+      <li *ngFor="let task of filterTasks; let i = index"
+        class="list-group-item d-flex justify-content-between align-items-center border-0 mb-2 rounded">
+        <div>
+          <input class="form-check-input me-2" type="checkbox" [(ngModel)]="task.completed">
+          <!-- <span [ngClass]="{'text-decoration-line-through': task.completed}">{{task.title}}</span> -->
+          <span *ngIf="editableId !== i; else editableCell" [ngClass]="{'text-decoration-line-through': task.completed}"
+            (dblclick)="startEdit(i)">
+            {{ task.title }}
+          </span>
+          <ng-template #editableCell>
+            <input class="px-2" type="text" #editInput [value]="task.title" (blur)="stopEdit(task, editInput.value)"
+              (keyup.enter)="stopEdit(task, editInput.value)" />
+          </ng-template>
+        </div>
+        <div class="btn-delete-task cursor-pointer" (click)="deleteTask(task)">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash-fill"
+            viewBox="0 0 16 16">
+            <path
+              d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z" />
+          </svg>
+        </div>
+      </li>
+    </ul>
+
+    <ng-template #notDataTpl>
+      <div class="d-flex flex-column align-items-center">
+        <img src="assets/svgs/undraw_clean_up_re_504g.svg" width="200" height="200" alt="No hay data">
+        <span class="fs-6 text-secondary">No se encontro ninguna tarea</span>
+      </div>
+    </ng-template>
+
+  </div>
 </div>
